fix layout overflow

--- a/css/styles.css
+++ b/css/styles.css
@@ -69,6 +69,7 @@ body {
 	min-width: 100%;
 	width: 100%;
 	position: absolute;
+	overflow-x: hidden;
 }
 
 p {
